gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail23760.d
version https://git-lfs.github.com/spec/v1
oid sha256:e673b3b593383bdac2eb83eebf2da41fb9d6d5a8d688011de99c5c49675fa9d8
size 683
